--- a/views/home.hbs
+++ b/views/home.hbs
@@ -693,7 +693,7 @@ user_tag_config['ebound_header_tag']['mobile']['adsCode'] = '';
 			<div class="clearfix"> </div>
 		</div>
 		<div class="col-md-6 w3ls_footer_grid1_left">
-			<p>&copy; 2017 Literature. All rights reserved | Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+			<p>&copy; 2017 Literature. All rights reserved | Design by <a href="https://school-in-pocket.herokuapp.com/">school-in-pocket</a></p>
 		</div>
 		<div class="col-md-6 w3ls_footer_grid1_right">
 			<ul>
