--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Literature an Education Category Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>SchoolInPocket</title>
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
