--- a/views/home.hbs
+++ b/views/home.hbs
@@ -278,7 +278,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<!-- //services -->
 		<!---728x90--->
-		<script src='//publisher.eboundservices.com/dynamicAds/dynamicScript.js'></script>
+		
 		<div style='margin: 0 auto;text-align: center;margin-top: 5px;'>
 			<script>
 				var allowedNumberOfEboundDynamicAdds = 4;
@@ -489,6 +489,63 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			</div>
 		</div>
 		<!-- //gallery -->
+			<div class="service">
+				<div class="container">
+					<h3 class="tittle-w3l">Our Sector of Interest</h3>
+					<div class="inner_sec">
+						<div class="col-md-4 grid_info_main">
+							<div class="grid_info">
+								<div class="icon_info">
+									<span class="fa fa-line-chart" aria-hidden="true"></span>
+									<h5>Acadamic Management</h5>
+									<p>Focus on overall digital reach of academics to all students through video lectures & e-learning. </p>
+								</div>
+							</div>
+							<div class="grid_info second">
+								<div class="icon_info">
+									<span class="fa fa-bookmark" aria-hidden="true"></span>
+									<h5>Examination Management</h5>
+									<p>Digital Management of all Exams including seat allotment , exam schedule and many more</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 grid_info_main">
+							<div class="grid_info">
+								<div class="icon_info">
+									<span class="fa fa-bicycle" aria-hidden="true"></span>
+									<h5>Transport Mangement</h5>
+									<p>This sector will focus on the mangement of transportation facilities of the institutions& online vehicle tracking through GPS</p>
+								</div>
+							</div>
+							<div class="grid_info second">
+								<div class="icon_info">
+									<span class="fa fa-female" aria-hidden="true"></span>
+									<h5>Human Resource Management</h5>
+									<p>It emphasize on the statical approach to manage institutional staff digitally</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 grid_info_main">
+							<div class="grid_info">
+								<div class="icon_info">
+									<span class="fa fa-laptop" aria-hidden="true"></span>
+									<h5>Leave Manegement</h5>
+									<p>Proper system of online application submission for Leave by students and all teaching& non-teaching staffs will be seen through this sector   </p>
+								</div>
+							</div>
+							<div class="grid_info second">
+								<div class="icon_info">
+									<span class="fa fa-home" aria-hidden="true"></span>
+									<h5>Hostel Management</h5>
+									<p>Management of Students staying in hostel and their day to day updates on the Portal of Parents will be covered through this sector </p>
+								</div>
+							</div>
+						</div>
+			
+						<div class="clearfix"> </div>
+					</div>
+				</div>
+			</div>
 		<!-- newsletter -->
 		<div class="newsletter" style="margin-top:5px">
 			<div class="container">
@@ -582,7 +639,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<h3 class="tittle-w3l">Mail Us</h3>
 				<div class="agileinfo_mail_grids">
 					<div class="col-md-7 agileinfo_mail_grid_right">
-						<form action="#" method="post">
+						<form action="/send_mail" method="post">
 							<div class="col-md-6 col-sm-6 wthree_contact_left_grid">
 								<input type="text" name="Name" placeholder="Name" required="">
 								<input type="email" name="Email" placeholder="Email" required="">
@@ -693,7 +750,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		</div>
 		<!-- //About -->
 		<!-- Team -->
-		<div class="team" id="faculties">
+		{{!-- <div class="team" id="faculties">
 			<div class="container">
 				<h3 class="tittle-w3l">Director's Desk</h3>
 				<div class="agile_banner_bottom_grids">
@@ -808,7 +865,46 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					</div> --}}
 				</div>
 			</div>
-		</div>
+		</div> --}}
+
+		{{!-- <div id="gallery" class="gallery">
+			<div class="container">
+				<h3 class="tittle-w3l">Director Desks</h3>
+				<div class="gallery-grids">
+					<section>
+						<ul id="da-thumbs" class="da-thumbs">
+							<li>
+								<a href="images/shashank.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
+									<img src="images/shashank.jpg" alt="" style="height: 234px;"/>
+									<div>
+										<h5>Assignments</h5>
+										<span>Get HW and CW regular updates</span>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="images/ravi.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
+									<img src="images/ravi.jpg" alt="" style="height: 234px;" />
+									<div>
+										<h5>Attendance</h5>
+										<span>Offline and online push on notifications of daily attendance</span>
+									</div>
+								</a>
+							</li>
+							<li>
+								<a href="images/shubham.jpg" class=" mask b-link-stripe b-animate-go   swipebox" title="">
+									<img src="images/shubham.jpg" alt="" style="width: 383px;" />
+									<div>
+										<h5>Results corner</h5>
+										<span>Examination result and analysis(statical and graphical view)</span>
+									</div>
+								</a>
+							</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+		</div>				 --}}
 
 		<div class="map">
 			<iframe src="https://maps.google.com/maps?q=brahamputra%20hostel%20nit%20patna&t=&z=13&ie=UTF8&iwloc=&output=embed"
