--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,16 +1,15 @@
 <!--
-	Author: Manish
-
+	Author: Eduvy
 -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-	<title>SchoolInPocket</title>
+	<title>Eduvy</title>
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Literature web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design"
+	<meta name="keywords" content="hello "
 	/>
 	<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 function hideURLbar(){ window.scrollTo(0,1); } </script>
@@ -39,40 +38,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <body>
 	<script src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
 	<script src="//m.servedby-buysellads.com/monetization.js" type="text/javascript"></script>
-	<script>
-		(function () {
-			if (typeof _bsa !== 'undefined' && _bsa) {
-				// format, zoneKey, segment:value, options
-				_bsa.init('flexbar', 'CKYI627U', 'placement:w3layoutscom');
-			}
-		})();
-	</script>
-	<script>
-		(function () {
-			if (typeof _bsa !== 'undefined' && _bsa) {
-				// format, zoneKey, segment:value, options
-				_bsa.init('fancybar', 'CKYDL2JN', 'placement:demo');
-			}
-		})();
-	</script>
-	<script>
-		(function () {
-			if (typeof _bsa !== 'undefined' && _bsa) {
-				// format, zoneKey, segment:value, options
-				_bsa.init('stickybox', 'CKYI653J', 'placement:w3layoutscom');
-			}
-		})();
-	</script>
-	<script>
-		(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)
-		}, i[r].l = 1 * new Date(); a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-		ga('create', 'UA-30027142-1', 'w3layouts.com');
-		ga('send', 'pageview');
-	</script>
+
 
 	<body>
 		<!-- banner -->
