--- a/views/home.hbs
+++ b/views/home.hbs
@@ -56,7 +56,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								</button>
 							</div>
 							<h1>
-								<a class="navbar-brand" href="index.html">Eduvy
+								<a class="navbar-brand" href="/">Eduvy
 									<span>A digital Rostrum</span>
 								</a>
 							</h1>
@@ -65,19 +65,17 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 								<ul class="nav navbar-nav">
 
 									<li>
-										<a class="active" href="index.html">Home</a>
-									</li>
-									<li>
-										<a href="#about" class="scroll">About</a>
+										<a class="active" href="/">Home</a>
 									</li>
 									<li>
 										<a href="#services" class="scroll">Services</a>
 									</li>
 									<li>
-										<a href="#faculties" class="scroll">Faculties</a>
+										<a href="#gallery" class="scroll">Features</a>
 									</li>
 									<li>
-										<a href="#gallery" class="scroll">Features</a>
+										
+										<a href="#about" class="scroll">About</a>
 									</li>
 									<li>
 										<a href="#mail" class="scroll">Mail Us</a>
@@ -151,56 +149,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<!-- //Grids -->
 		</div>
 		<!---728x90--->
-		<script src='//publisher.eboundservices.com/dynamicAds/dynamicScript.js'></script>
-		<div style='margin: 0 auto;text-align: center;margin-top: 5px;'>
-			<script>
-				var allowedNumberOfEboundDynamicAdds = 4;
-				var sizesEboundDynamicAdsDesktop = ['728x90'];
-				var sizesEboundDynamicAdsTablet = ['728x90'];
-				var sizesEboundDynamicAdsMobile = ['320x100'];
-				eboundAdsTagByDevice(sizesEboundDynamicAdsDesktop, sizesEboundDynamicAdsTablet, sizesEboundDynamicAdsMobile, 'ebound_header_tag');
-
-				if (typeof user_tag_config == 'undefined') {
-					var user_tag_config = {};
-				}
-				user_tag_config['ebound_header_tag'] = {};
-				user_tag_config['ebound_header_tag']['desktop'] = {};
-				user_tag_config['ebound_header_tag']['desktop']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['desktop']['adsCode'] = '';
-				user_tag_config['ebound_header_tag']['tablet'] = {};
-				user_tag_config['ebound_header_tag']['tablet']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['tablet']['adsCode'] = '';
-				user_tag_config['ebound_header_tag']['mobile'] = {};
-				user_tag_config['ebound_header_tag']['mobile']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['mobile']['adsCode'] = '';
-			</script>
-		</div>
-
-		<!---728x90--->
-		<script src='//publisher.eboundservices.com/dynamicAds/dynamicScript.js'></script>
-		<div style='margin: 0 auto;text-align: center;margin-top: 5px;'>
-			<script>
-				var allowedNumberOfEboundDynamicAdds = 4;
-				var sizesEboundDynamicAdsDesktop = ['728x90'];
-				var sizesEboundDynamicAdsTablet = ['728x90'];
-				var sizesEboundDynamicAdsMobile = ['320x100'];
-				eboundAdsTagByDevice(sizesEboundDynamicAdsDesktop, sizesEboundDynamicAdsTablet, sizesEboundDynamicAdsMobile, 'ebound_header_tag');
-
-				if (typeof user_tag_config == 'undefined') {
-					var user_tag_config = {};
-				}
-				user_tag_config['ebound_header_tag'] = {};
-				user_tag_config['ebound_header_tag']['desktop'] = {};
-				user_tag_config['ebound_header_tag']['desktop']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['desktop']['adsCode'] = '';
-				user_tag_config['ebound_header_tag']['tablet'] = {};
-				user_tag_config['ebound_header_tag']['tablet']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['tablet']['adsCode'] = '';
-				user_tag_config['ebound_header_tag']['mobile'] = {};
-				user_tag_config['ebound_header_tag']['mobile']['cpm'] = '';
-				user_tag_config['ebound_header_tag']['mobile']['adsCode'] = '';
-			</script>
-		</div>
 		<!-- services -->
 		<div class="services" id="services" style="margin-top:56px">
 			<div class="container">
